# content-scheduler

./: Cargo.toml  Dockerfile  compose.yaml
migrations/: 20231018220219_create-db.sql
src/: .env  main.rs  postgres.rs  routes.rs
