[package]
name = "content-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["full"]}
chrono = { version = "0.4.*", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
axum = "0.6.20"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
axum-macros = "0.3.8"
uuid = {version = "1.5.0", features = ["v4"]}

[[bin]]
name = "backend"
path = "src/main.rs"
